--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nginx loadbalancer scaffold",
   "main": "index.js",
   "scripts": {
-    "start": "docker-compose -f docker-compose.yml -p local-app-lb up -d",
+    "start": "docker-compose -f docker-compose.yml -p local-app-lb up --build -d",
     "stop": "docker-compose -f docker-compose.yml -p local-app-lb down"
   },
   "author": "Hari Mukkapati",
